New function to test the IS creation, Decomp and Recomp functions

--- a/examples/fluids/gaussianwave.yaml
+++ b/examples/fluids/gaussianwave.yaml
@@ -39,6 +39,7 @@ snes_lag_jacobian_persists:
 # Data Compression Settings
 # compress: true
 compress_data: true
+datacomp_test_funcs: true
 data_comp:
   pc_hypre_boomeramg:
     coarsen_type: modifiedRuge-Stueben
